apps/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        supplementalGroups:
          - 989   # render (from your host)
          - 985   # video  (from your host)
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        securityContext:
          privileged: true
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        - name: https
          containerPort: 8920
          protocol: TCP
        - name: discovery
          containerPort: 7359
          protocol: UDP
        - name: dlna
          containerPort: 1900
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        - name: music
          mountPath: /music
        - name: dri
          mountPath: /dev/dri
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "8Gi"
            cpu: "24"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: cache
        emptyDir: {}
      - name: tv
        hostPath:
          path: /NAS/Torrent/Shows
          type: Directory
      - name: movies
        hostPath:
          path: /NAS/Torrent/Movies
          type: Directory
      - name: music
        hostPath:
          path: /NAS/Torrent/Music
          type: Directory
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
