apps/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
  annotations:
    metallb.universe.tf/address-pool: default-pool
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.225
  selector:
    app: jellyfin
  ports:
  - name: web-http
    port: 8096
    targetPort: 8096
    protocol: TCP
  - name: web-https
    port: 8920
    targetPort: 8920
    protocol: TCP
  - name: discovery
    port: 7359
    targetPort: 7359
    protocol: TCP
